--- a/index.Rmd
+++ b/index.Rmd
@@ -93,9 +93,7 @@ There is a strong emphasis in reproducible research by extensively using R/Rmark
 - To install all requirements, please copy and paste this lines of code in your R console.
 
 ```
-install.packages("renv")
-url <- "https://raw.githubusercontent.com/statOmics/PSLS21/master/renv.lock"
-renv::restore(lockfile = url)
+source("https://raw.githubusercontent.com/GTPB/PSLS21/master/install.R")
 ```
 
 - To get familiar with most important concepts in working with R and Rmarkdown, you may download the respective cheat sheets:
